<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/create"
        android:textColor="#F5F5F5"
        app:backgroundTint="#ff0082"
        app:layout_constraintBottom_toTopOf="@id/heading3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sfprotext_regular"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#F5F5F5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/type_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_room" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_a_room_code"
        android:textColorHint="#F5F5F5"
        app:boxStrokeColor="@color/box_stroke"
        app:hintTextColor="#F5F5F5"
        app:layout_constraintBottom_toTopOf="@id/join"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="#F5F5F5"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:textColor="#F5F5F5"
        app:backgroundTint="#ff0082"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/type_code"
        app:layout_constraintRight_toRightOf="@id/type_code"
        app:layout_constraintTop_toBottomOf="@id/type_code" />

</androidx.constraintlayout.widget.ConstraintLayout>