<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lobster"
        android:text="BINGO"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#f6f7fc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:fontFamily="@font/sfprotext_medium"
        android:text="@string/welcome_back"
        android:textColor="#F5F5F5"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sfprotext_regular"
        android:text="@string/sign_in"
        android:textColor="#F5F5F5"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_fac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_fac"
        android:textColor="@color/white"
        app:backgroundTint="#ff0082"
        app:icon="@drawable/ic_facebook_logo"
        app:iconTint="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/heading2"
        app:layout_constraintRight_toRightOf="@id/heading2"
        app:layout_constraintTop_toBottomOf="@id/heading2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sfprotext_regular"
        android:text="@string/or"
        android:textColor="#F5F5F5"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_fac" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_google"
        android:textColor="@color/white"
        app:backgroundTint="#ff0082"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_google_plus"
        app:layout_constraintLeft_toLeftOf="@id/join_fac"
        app:layout_constraintRight_toRightOf="@id/join_fac"
        app:layout_constraintTop_toBottomOf="@id/heading3" />



    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>