<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/userProfilePic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sfprotext_medium"
        android:textColor="#D3D3D3"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userProfilePic" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sub_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sfprotext_regular"
        android:text="@string/lets_play_your_game"
        android:textColor="#838382"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sub_heading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:fontFamily="@font/sfprotext_medium"
        android:text="Explore"
        android:textColor="#D3D3D3"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/sub_heading"
        app:layout_constraintTop_toBottomOf="@id/sub_heading" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/play_friend"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/purple_200_alpha"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp"
        app:cardElevation="4dp"
        app:layout_constraintDimensionRatio="H,8:9"
        app:layout_constraintLeft_toLeftOf="@id/sub_heading2"
        app:layout_constraintTop_toBottomOf="@id/sub_heading2"
        app:layout_constraintWidth_percent="0.4">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/avenirbold"
            android:text="@string/play_with_friends"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/play_offline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/purple_200_alpha"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp"
        app:cardElevation="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintDimensionRatio="H,8:9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_heading2"
        app:layout_constraintWidth_percent="0.4">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/avenirbold"
            android:text="@string/play_offline"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>